cambio path img

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- HEADER -->
   <header class="nav-header">
     <div class="img1">
-      <img src="./tp-hostinger/images/Hostinger_logo_black.svg" alt="Logo de Hostinger" width="160" />
+      <img src="./images/Hostinger_logo_black.svg" alt="Logo de Hostinger" width="160" />
     </div>
 
     <input type="checkbox" id="menu-toggle" class="menu-toggle-checkbox" hidden>
@@ -28,7 +28,7 @@
       <a href="#" class="link">n8 autoalojado</a>
 
       <div class="lang">
-        <img src="./tp-hostinger/images/bandera.svg" alt="Bandera Argentina" width="24" />
+        <img src="./images/bandera.svg" alt="Bandera Argentina" width="24" />
         <span>Español</span>
       </div>
       <button class="btn-menu">Ingresar</button>
@@ -159,7 +159,7 @@
       </div>
 
       <div class="footer-brand-social">
-        <img src="./tp-hostinger/images/Hostinger_logo_black.svg" alt="Logo Hostinger" class="footer-logo" />
+        <img src="./images/Hostinger_logo_black.svg" alt="Logo Hostinger" class="footer-logo" />
         <div class="footer-social">
           <a href="#"><i class="bi bi-instagram"></i></a>
           <a href="#"><i class="bi bi-facebook"></i></a>
